@startuml

title Pizza Service
skinparam monochrome true
skinparam classBackgroundColor #ffffff
skinparam stereoTypeCBackgroundColor #ffffff
skinparam stereoTypeABackgroundColor #ffffff
skinparam shadowing false

abstract class Product {
    -Long id
    +BigDecimal evaluateCost()
}

class Pizza

class Ingredient {
    -Long id
    -String name
    -BigDecimal cost
}

Pizza "  1  " *-left- "   1..n " Ingredient
Product <|-- Pizza

class Purchase {
    -Long id
    -Boolean billed
    -Boolean prepared
    -Boolean delivered
    +BigDecimal evaluateCost()
}

Purchase "1  " o-left- "1..n" Product

class Customer {
    -Long id
    -String firstName
    -String surName
}

Customer "1   " *-left- "1..n " Purchase

class Address {
    -Long id
    -String street
    -String zip
    -String city
    -String country
}

Customer "n  " o-- "1..n " Address

@enduml